--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@ initial-scale=1.0">
 <main>
 <h2>Boris Morris</h2>
 <p>My name is Boris Morris, I am from Montego Bay and my major is Computer Science. 
-I am interested in web development because I want to create products that are useful </p>
+I am interested in web development because I want to create products that are useful. </p>
+<img src="image1.jpg"
+alt="light house image" width="350"
+height="350" />
 </main>
 <footer>
 <p>Copyright &copy; 2020 Boris Morris.</p>
